fixed nav logo on mobile devices screens

--- a/public/styles.css
+++ b/public/styles.css
@@ -82,7 +82,6 @@ body {
     padding: 1rem;
     font-size: 32px;
     cursor:pointer
-
 }
 
 @media screen and (max-width: 800px) {
@@ -99,19 +98,19 @@ body {
 }
 
 
-.header-logo-mobile-view{
+.mobile-header-logo{
     display: none;
     position: absolute;
     top: 0;
     left: 0;
-    width: 20vw;
-    max-width: 100px;
     height: auto;
     padding: 1rem;
-
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: var(--primary-text-color);
 }
 @media screen and (max-width: 800px) {
-    .header-logo-mobile-view {
+    .mobile-header-logo {
         display: block;
       }
 }
@@ -136,14 +135,12 @@ nav.navbar  .header-logo {
     font-size: 1.5rem;
     font-weight: 700;
     color: var(--primary-text-color);
-
 }
 
 nav ul {
     display: flex;
     gap: 2rem;
     color: var(--secondary-text-color);
-    
 }
 
 nav ul li a{
